코드 리팩토링 & README.md 작성  - 가독성 향상  - 변수 / 메서드 이름을 직관적이게 변경  - jdk 20-> jdk 17로 변경